added new favicon png

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 body {
   background-color: black;
 }
 
 .container {
-  color: red;
+  color: rgb(16, 150, 12);
 }
