--- a/src/index.css
+++ b/src/index.css
@@ -149,14 +149,13 @@ input:focus {
   color: #fff;
   border: 0;
   border-radius: 8px;
-  color: #fff;
   width: 100px;
   height: 40px;
   cursor: pointer;
 }
 
 .btn-primary {
-  background-color: #202142;
+  background: #ff6a95;
 }
 
 .btn-secondary {
