--- a/src/index.css
+++ b/src/index.css
@@ -131,18 +131,23 @@ input:focus {
   left: -10px;
 }
 
+.close {
+  margin-top: 4px;
+}
+
 .close,
 .edit {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 15px;
   cursor: pointer;
   background: none;
   border: none;
 }
 
 .edit {
-  right: 40px;
+  right: 35px;
+
 }
 
 .btn {
